--- a/files/支付等待弹窗/styles.css
+++ b/files/支付等待弹窗/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u105 {
+#u111 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -20,7 +20,7 @@
   width:0px;
   height:0px;
 }
-#u106_img {
+#u112_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -28,7 +28,7 @@
   width:319px;
   height:69px;
 }
-#u106 {
+#u112 {
   border-width:0px;
   position:absolute;
   left:41px;
@@ -36,7 +36,7 @@
   width:319px;
   height:69px;
 }
-#u106_text {
+#u112_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -45,7 +45,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u107_img {
+#u113_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -53,7 +53,7 @@
   width:2px;
   height:70px;
 }
-#u107 {
+#u113 {
   border-width:0px;
   position:absolute;
   left:40px;
@@ -61,7 +61,7 @@
   width:1px;
   height:69px;
 }
-#u107_text {
+#u113_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -70,7 +70,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u108_img {
+#u114_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -78,7 +78,7 @@
   width:320px;
   height:2px;
 }
-#u108 {
+#u114 {
   border-width:0px;
   position:absolute;
   left:41px;
@@ -86,7 +86,7 @@
   width:319px;
   height:1px;
 }
-#u108_text {
+#u114_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -95,7 +95,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u109_div {
+#u115_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -110,218 +110,13 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u109 {
+#u115 {
   border-width:0px;
   position:absolute;
   left:132px;
   top:66px;
   width:138px;
   height:38px;
-}
-#u109_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u110_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:43px;
-  height:20px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u110 {
-  border-width:0px;
-  position:absolute;
-  left:173px;
-  top:75px;
-  width:43px;
-  height:20px;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u110_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:43px;
-  white-space:nowrap;
-}
-#u111_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:197px;
-  height:20px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u111 {
-  border-width:0px;
-  position:absolute;
-  left:55px;
-  top:159px;
-  width:197px;
-  height:20px;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u111_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:197px;
-  white-space:nowrap;
-}
-#u112_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:111px;
-  height:20px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u112 {
-  border-width:0px;
-  position:absolute;
-  left:55px;
-  top:194px;
-  width:111px;
-  height:20px;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u112_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:111px;
-  white-space:nowrap;
-}
-#u113_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:319px;
-  height:37px;
-  background:inherit;
-  background-color:rgba(242, 242, 242, 1);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u113 {
-  border-width:0px;
-  position:absolute;
-  left:41px;
-  top:224px;
-  width:319px;
-  height:37px;
-}
-#u113_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u114_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:57px;
-  height:20px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u114 {
-  border-width:0px;
-  position:absolute;
-  left:55px;
-  top:231px;
-  width:57px;
-  height:20px;
-  font-family:'PingFangSC-Regular', 'PingFang SC';
-  font-weight:400;
-  font-style:normal;
-}
-#u114_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:57px;
-  white-space:nowrap;
-}
-#u115_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:319px;
-  height:36px;
-}
-#u115 {
-  border-width:0px;
-  position:absolute;
-  left:41px;
-  top:261px;
-  width:319px;
-  height:36px;
 }
 #u115_text {
   border-width:0px;
@@ -337,6 +132,211 @@
   position:absolute;
   left:0px;
   top:0px;
+  width:43px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u116 {
+  border-width:0px;
+  position:absolute;
+  left:173px;
+  top:75px;
+  width:43px;
+  height:20px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u116_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:43px;
+  white-space:nowrap;
+}
+#u117_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:197px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u117 {
+  border-width:0px;
+  position:absolute;
+  left:55px;
+  top:159px;
+  width:197px;
+  height:20px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u117_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:197px;
+  white-space:nowrap;
+}
+#u118_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:111px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u118 {
+  border-width:0px;
+  position:absolute;
+  left:55px;
+  top:194px;
+  width:111px;
+  height:20px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u118_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:111px;
+  white-space:nowrap;
+}
+#u119_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:319px;
+  height:37px;
+  background:inherit;
+  background-color:rgba(242, 242, 242, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u119 {
+  border-width:0px;
+  position:absolute;
+  left:41px;
+  top:224px;
+  width:319px;
+  height:37px;
+}
+#u119_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u120_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:57px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u120 {
+  border-width:0px;
+  position:absolute;
+  left:55px;
+  top:231px;
+  width:57px;
+  height:20px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+}
+#u120_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:57px;
+  white-space:nowrap;
+}
+#u121_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:319px;
+  height:36px;
+}
+#u121 {
+  border-width:0px;
+  position:absolute;
+  left:41px;
+  top:261px;
+  width:319px;
+  height:36px;
+}
+#u121_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u122_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
   width:319px;
   height:276px;
   background:inherit;
@@ -347,7 +347,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u116 {
+#u122 {
   border-width:0px;
   position:absolute;
   left:41px;
@@ -355,7 +355,7 @@
   width:319px;
   height:276px;
 }
-#u116_text {
+#u122_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -364,7 +364,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u117_div {
+#u123_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -379,7 +379,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u117 {
+#u123 {
   border-width:0px;
   position:absolute;
   left:41px;
@@ -387,7 +387,7 @@
   width:319px;
   height:40px;
 }
-#u117_text {
+#u123_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -395,7 +395,7 @@
   width:315px;
   word-wrap:break-word;
 }
-#u118_img {
+#u124_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -403,7 +403,7 @@
   width:2px;
   height:544px;
 }
-#u118 {
+#u124 {
   border-width:0px;
   position:absolute;
   left:40px;
@@ -411,7 +411,7 @@
   width:1px;
   height:543px;
 }
-#u118_text {
+#u124_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -420,7 +420,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u119_div {
+#u125_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -438,7 +438,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u119 {
+#u125 {
   border-width:0px;
   position:absolute;
   left:55px;
@@ -449,7 +449,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u119_text {
+#u125_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -457,7 +457,7 @@
   width:200px;
   white-space:nowrap;
 }
-#u120_div {
+#u126_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -472,7 +472,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u120 {
+#u126 {
   border-width:0px;
   position:absolute;
   left:319px;
@@ -480,7 +480,7 @@
   width:30px;
   height:30px;
 }
-#u120_text {
+#u126_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -489,7 +489,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u121 {
+#u127 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -497,7 +497,7 @@
   width:0px;
   height:0px;
 }
-#u122_div {
+#u128_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -512,7 +512,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u122 {
+#u128 {
   border-width:0px;
   position:absolute;
   left:41px;
@@ -520,7 +520,7 @@
   width:319px;
   height:49px;
 }
-#u122_text {
+#u128_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -529,7 +529,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u123_img {
+#u129_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -537,7 +537,7 @@
   width:27px;
   height:26px;
 }
-#u123 {
+#u129 {
   border-width:0px;
   position:absolute;
   left:55px;
@@ -545,7 +545,7 @@
   width:27px;
   height:26px;
 }
-#u123_text {
+#u129_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -554,7 +554,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u124_div {
+#u130_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -572,7 +572,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u124 {
+#u130 {
   border-width:0px;
   position:absolute;
   left:92px;
@@ -583,7 +583,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u124_text {
+#u130_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -591,7 +591,7 @@
   width:57px;
   white-space:nowrap;
 }
-#u125_img {
+#u131_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -599,7 +599,7 @@
   width:2px;
   height:544px;
 }
-#u125 {
+#u131 {
   border-width:0px;
   position:absolute;
   left:359px;
@@ -607,7 +607,7 @@
   width:1px;
   height:543px;
 }
-#u125_text {
+#u131_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -616,7 +616,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u126 {
+#u132 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -624,7 +624,7 @@
   width:0px;
   height:0px;
 }
-#u127_div {
+#u133_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -639,7 +639,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u127 {
+#u133 {
   border-width:0px;
   position:absolute;
   left:40px;
@@ -648,7 +648,7 @@
   height:543px;
   opacity:0.2;
 }
-#u127_text {
+#u133_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -657,7 +657,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u128_div {
+#u134_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -672,7 +672,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u128 {
+#u134 {
   border-width:0px;
   position:absolute;
   left:71px;
@@ -680,7 +680,7 @@
   width:257px;
   height:85px;
 }
-#u128_text {
+#u134_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -689,7 +689,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u129_div {
+#u135_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -708,7 +708,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u129 {
+#u135 {
   border-width:0px;
   position:absolute;
   left:91px;
@@ -720,7 +720,7 @@
   font-style:normal;
   font-size:12px;
 }
-#u129_text {
+#u135_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -728,7 +728,7 @@
   width:95px;
   white-space:nowrap;
 }
-#u130_div {
+#u136_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -748,7 +748,7 @@
   font-size:12px;
   color:#169BD5;
 }
-#u130 {
+#u136 {
   border-width:0px;
   position:absolute;
   left:259px;
@@ -761,11 +761,21 @@
   font-size:12px;
   color:#169BD5;
 }
-#u130_text {
+#u136_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:49px;
   white-space:nowrap;
+}
+#u137 {
+  border-width:0px;
+  position:absolute;
+  left:234px;
+  top:289px;
+  width:94px;
+  height:33px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
 }
